iphone overflow fix attempt

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,6 @@
 body {
   margin: 0;
   padding: 0;
-  //font-family: 'Barlow Semi Condensed', sans-serif;
   font-family: Helvetica, sans-serif;
   box-sizing: border-box;
 }
@@ -12,5 +11,5 @@ body {
 html {
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow-x: hidden;
 }
